# kyogoku

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PARSER_METRICS.md  README.md  RENPY_PARSER_SUMMARY.md
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/kyogoku-cli/: Cargo.toml
crates/kyogoku-cli/src/: main.rs
crates/kyogoku-cli/src/commands/: cache.rs  config.rs  init.rs  mod.rs  plugin.rs  translate.rs
crates/kyogoku-core/: Cargo.toml
crates/kyogoku-core/src/: api.rs  cache.rs  config.rs  engine.rs  glossary.rs  lib.rs
crates/kyogoku-core/src/plugin/: loader.rs  manifest.rs  mod.rs  registry.rs  wasm.rs
crates/kyogoku-core/src/rag/: embeddings.rs  mod.rs  vectordb.rs
crates/kyogoku-gui/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
crates/kyogoku-gui/src/: main.ts  styles.css
crates/kyogoku-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/kyogoku-gui/src-tauri/src/: lib.rs  main.rs
crates/kyogoku-gui/tests/: mock-backend.spec.ts  ui.spec.ts
crates/kyogoku-i18n/: Cargo.toml
crates/kyogoku-i18n/locales/en-US/: main.ftl
crates/kyogoku-i18n/locales/ja-JP/: main.ftl
crates/kyogoku-i18n/locales/zh-CN/: main.ftl
crates/kyogoku-i18n/src/: lib.rs
crates/kyogoku-parser/: Cargo.toml
crates/kyogoku-parser/benches/: parser_bench.rs
crates/kyogoku-parser/examples/: test_parsers.rs
crates/kyogoku-parser/src/: ass.rs  block.rs  epub.rs  json.rs  lib.rs  md.rs  parser.rs  rpy.rs  srt.rs  txt.rs  vtt.rs
crates/kyogoku-parser/tests/: edge_cases.rs  epub_test.rs  integration_test.rs  rpy_multiline.rs
crates/kyogoku-parser/tests/fixtures/: Charles Baudelaire Oeuvres Complètes (Charles Baudelaire) .epub  羊をめぐる冒険 (村上春樹).epub  走ることについて語るときに僕の語ること (文春文庫) (村上 春樹).epub
crates/kyogoku-parser/tests/fixtures/games/: basic_dialogue.rpy  mtool_export.json
crates/kyogoku-parser/tests/fixtures/safety/: malformed_json.json  utf8_bom.txt
crates/kyogoku-parser/tests/fixtures/subtitles/: effect_tags.ass  standard.srt  standard.vtt
crates/kyogoku-parser/tests/fixtures/text/: sample.txt
crates/kyogoku-parser/tests/snapshots/: integration_test__ass_snapshot.snap  integration_test__json_snapshot.snap  integration_test__rpy_snapshot.snap
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPER.md  PLUGIN_DEVELOPMENT.md  ROADMAP.md  TESTING.md  USER_GUIDE.md
examples/csv-plugin/: Cargo.toml  README.md  plugin.toml
examples/csv-plugin/src/: lib.rs
examples/samples/: README.md  game_dialogue.json  novel.txt  subtitles.ass  subtitles.srt  visual_novel.rpy
tests/: PERFORMANCE_REPORT.md  large_file_test.py  perf-results.csv  perf_test.py
tests/perf-corpus/: README.md
tests/perf-corpus/long/: game.json  game.rpy  movie.ass  movie.srt  movie.vtt  novel.txt
tests/perf-corpus/medium/: chapter.rpy  chapter.txt  episode.ass  episode.srt  episode.vtt  game.json
tests/perf-corpus/short/: dialogue.json  dialogue.txt  scene.rpy  subtitles.ass  subtitles.srt  subtitles.vtt
