[workspace]
members = [
    "crates/kyogoku-core",
    "crates/kyogoku-parser",
    "crates/kyogoku-cli",
    "crates/kyogoku-gui/src-tauri", "crates/kyogoku-i18n",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1.5"
regex = "1.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
