[package]
name = "kyogoku-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kyogoku"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kyogoku-core = { path = "../kyogoku-core" }
kyogoku-parser = { path = "../kyogoku-parser" }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
toml = "0.8"
