[package]
name = "kyogoku-cli"
version = "0.3.3"
edition = "2024"

[[bin]]
name = "kyogoku"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kyogoku-core = { path = "../kyogoku-core" }
kyogoku-parser = { path = "../kyogoku-parser" }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
toml = "0.8"
