[package]
name = "kyogoku-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
directories = "5.0"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sled = "0.34"
blake3 = { workspace = true }
kyogoku-parser = { path = "../kyogoku-parser" }

[dev-dependencies]
tempfile = "3.27"
