[package]
name = "kyogoku-core"
version = "0.3.2"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
directories = "5.0"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sled = "0.34"
blake3 = { workspace = true }
kyogoku-parser = { path = "../kyogoku-parser" }
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
tokenizers = "0.19.1"
ndarray = "0.17"
lance = "0.12.0"
futures = "0.3"
bincode = "1.3"
chrono = "=0.4.38"

[dev-dependencies]
tempfile = "3.27"
wiremock = "0.6"
