[package]
name = "kyogoku-core"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
directories = "5.0"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sled = "0.34"
blake3 = { workspace = true }
kyogoku-parser = { path = "../kyogoku-parser" }
ort = { version = "2.0.0-rc.9", features = ["download-binaries"], optional = true }
tokenizers = { version = "0.19.1", optional = true }
ndarray = { version = "0.17", optional = true }
lance = { version = "0.12.0", optional = true }
futures = { version = "0.3", optional = true }
bincode = { version = "1.3", optional = true }
chrono = { version = "=0.4.38", optional = true }
wasmtime = { version = "43", optional = true }

[features]
default = []
rag = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:lance", "dep:futures", "dep:bincode", "dep:chrono"]
wasm-plugins = ["dep:wasmtime"]

[dev-dependencies]
tempfile = "3.27"
wiremock = "0.6"
