[package]
name = "kyogoku-i18n"
version = "0.5.0"
edition = "2021"

[dependencies]
fluent = "0.16.0"
fluent-bundle = "0.15.3"
fluent-syntax = "0.11.1"
unic-langid = "0.9.5"
rust-embed = "8.5.0"
thiserror = "2.0.3"
log = "0.4.22"
lazy_static = "1.5.0"
intl-memoizer = "0.5.2"

[dev-dependencies]
anyhow = "1.0.86"
