[package]
name = "kyogoku-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
nom = "8"

[dev-dependencies]
tempfile = "3.10"
insta = "1.41"
